# ILLUSTPOSE-OpenPoseFinetuning-

./: .gitignore  illustpose_test.py  illustpose_train.py  predict_single_image.py  pyproject.toml
IllustPose/: pyproject.toml
Output_accuracy/: Output_accuracy.py
utils/: __init__.py  data_augumentation.py  dataloader.py  decode_pose.py  openpose_net.py
