[project]
name = "StickFig2Pose"
version = "0.1.0"
description = "An experimental project for generating poses from stick figure drawings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "scipy>=1.15.1",
    "torch>=2.6.0",
    "torchvision>=0.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.ruff.format]
indent-style = "tab"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
